# peregrine

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.zh-cn.md  CHANGELOG_ALPHA.md  CHANGELOG_ALPHA.zh-cn.md  CONTRIBUTING.md  CONTRIBUTING.zh-cn.md  Cargo.toml  HELP.md  HELP.zh-cn.md  LICENSE  README.md  README.zh-cn.md  index.html  package-lock.json  package.json  run-dev.bat  tailwind.config.ts  vite.config.ts
.agent/skills/bugfix/: SKILL.md
.agent/skills/codebase-audit/: SKILL.md
.agent/skills/feature/: SKILL.md
.agent/skills/release/: SKILL.md
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  labeler.yml  opencode.yml  pages.yml  release.yml  snapshot.yml
assets/: gen_icon.cjs  gen_icon.py
crates/config/: Cargo.toml
crates/config/src/: lib.rs  migration.rs  notifier.rs  rng.rs  schema.rs  storage.rs  watcher.rs
crates/material/: Cargo.toml
crates/material/builtin/: border_frame.rhai  corner_dots.rhai  cross.rhai  custom_orb.rhai  edge_arrows.rhai  edge_rect.rhai  grid.rhai  image.rhai  large_cross.rhai  random_orb.rhai  ring.rhai  time.rhai
crates/material/src/: context.rs  error.rs  lib.rs  material.rs  registry.rs
crates/peregrine/: Cargo.toml  build.rs
crates/peregrine/src/: icon.rs  lib.rs  main.rs  overlay_renderer.rs  renderer.rs  settings_ui.rs  shapes.rs  svg_renderer.rs
crates/peregrine/src/platform/: mod.rs  windows.rs
docs/: index.md  manual-test-checklist.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/en/: index.md
docs/en/guide/: changelog.md  config.md  development.md  features.md  getting-started.md  glossary.md  intro.md  motion-sickness.md  recommendations.md  usage.md
docs/guide/: changelog.md  config.md  development.md  features.md  getting-started.md  glossary.md  intro.md  motion-sickness.md  recommendations.md  usage.md
docs/public/: CNAME
docs/zh-cn/: index.md
docs/zh-cn/guide/: config.md  development.md  features.md  getting-started.md  intro.md  usage.md
openspec/changes/four-layer-customization/: .openspec.yaml  README.md  design.md  proposal.md  tasks.md
openspec/changes/four-layer-customization/specs/element-primitives/: spec.md
openspec/changes/four-layer-customization/specs/layer-composition/: spec.md
openspec/changes/four-layer-customization/specs/material-dynamic-input/: spec.md
openspec/changes/four-layer-customization/specs/material-runtime/: spec.md
openspec/changes/four-layer-customization/specs/profile-migration/: spec.md
openspec/changes/merge-dev-into-four-layer/: design.md  proposal.md  tasks.md
openspec/changes/merge-dev-into-four-layer/specs/dev-merge-integration/: spec.md
openspec/changes/multi-profile-config/: design.md  proposal.md  tasks.md
scripts/: test-windows.ps1  test.sh
src/: ConfigApp.tsx  SettingsApp.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  overlay.rs
src/components/: DeveloperPanel.tsx  ErrorBoundary.tsx  LayerEditors.tsx  LayerPanel.tsx  LayersEditor.tsx  MarkdownReleaseNotes.tsx  Preview.tsx  ProfileManager.tsx  StyleFields.tsx
src/components/config/: AutoSwitchDialog.tsx  TargetWindowSelect.tsx  UpdateDialog.tsx  UpdateProgress.tsx
src/components/settings/: AboutTab.tsx  GeneralTab.tsx  HotkeysTab.tsx  OverlayTab.tsx  UpdateTab.tsx
src/components/ui/: button.tsx  checkbox.tsx  kbd.tsx  slider.tsx  switch.tsx
src/hooks/: useAppState.ts  useConfigAppState.ts  useConfigSave.ts  useOverlayActions.ts  useSettingsAppState.ts  useSettingsSync.ts  useUpdate.ts  useUpdateConfig.ts
src/i18n/: options.json
src/i18n/locales/: en.json  zh-CN.json
src/lib/: actionLog.ts  api.ts  globalErrorToast.ts  i18n.tsx  layers.ts  presets.ts  shapes.ts
src/types/: config.ts
