[workspace]
resolver = "3"
members = ["crates/config", "crates/peregrine"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Peregrine Contributors"]
rust-version = "1.85"

[workspace.dependencies]
# config crate
tokio = { version = "1.44", features = ["sync", "rt", "rt-multi-thread", "macros", "time", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "7.0"
thiserror = "2.0"
tracing = "0.1"

# peregrine binary
winit = "0.30"
wgpu = "24.0"
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"
pollster = "0.4"

[profile.dev]
opt-level = 1
