[workspace]
resolver = "3"
members = ["crates/config", "crates/peregrine", "src-tauri"]

[workspace.package]
version = "0.1.8-alpha.1"
edition = "2024"
license = "MIT"
authors = ["Peregrine Contributors"]
rust-version = "1.85"

[workspace.dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-build = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"

# config crate
tokio = { version = "1.44", features = ["sync", "rt", "rt-multi-thread", "macros", "time", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "7.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# peregrine lib（overlay / shapes / platform）
winit = "0.30"
softbuffer = "0.4"
png = "0.17"

[profile.dev]
# debug 构建保留 opt-level=1，平衡图形栈调试运行速度与编译速度。
opt-level = 1

[profile.release]
# 最高级别优化，同时启用链接时优化以减小程序体积并提升运行性能。
opt-level = "z"
lto = true
codegen-units = 1
# 剥离调试符号，显著减小 release 二进制体积。
strip = true
# 全局通用 panic 处理（不展开栈），进一步减小体积。
panic = "abort"
# 关闭整数溢出检查（release 中默认开启），换取一点运行时性能；
# 如果项目对安全性要求更高，可删除此项。
overflow-checks = false
