[package]
name = "peregrine-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
peregrine = { path = "../crates/peregrine" }
peregrine_config = { path = "../crates/config" }
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-updater = { workspace = true }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
winit = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
url = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_Globalization", "Win32_System_Threading"] }
