[package]
name = "peregrine_material"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "peregrine_material"
path = "src/lib.rs"

[dependencies]
peregrine_config = { path = "../config" }
rhai = { workspace = true }
ahash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
