[package]
name = "peregrine"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "peregrine"
path = "src/main.rs"

[dependencies]
peregrine_config = { path = "../config" }
winit = { workspace = true }
wgpu = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
pollster = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
