[package]
name = "peregrine"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "peregrine"
path = "src/main.rs"

[dependencies]
peregrine_config = { path = "../config" }
winit = { workspace = true }
wgpu = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
pollster = { workspace = true }
tray-icon = { workspace = true }
softbuffer = { workspace = true }
png = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0"
