[package]
name = "peregrine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "peregrine"
path = "src/lib.rs"

[dependencies]
peregrine_config = { path = "../config" }
peregrine_material = { path = "../material" }
winit = { workspace = true }
softbuffer = { workspace = true }
png = { workspace = true }
resvg = { workspace = true }
usvg = { workspace = true }
tiny-skia = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
